--- a/warranty_tracker/pubspec.yaml
+++ b/warranty_tracker/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.0
   firebase_auth: ^0.14.0+5
   cloud_firestore: ^0.12.9+4
+  firebase_storage: ^3.0.4
+  firebase_core: ^0.4.0+8
   provider: ^3.1.0
   flutter_spinkit: ^4.1.2+1
   google_fonts: ^1.1.1
