--- a/warranty_tracker/android/app/build.gradle
+++ b/warranty_tracker/android/app/build.gradle
@@ -65,4 +65,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:26.3.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.google.android.gms:play-services-ads:19.5.0'
+    implementation 'com.google.android.gms:play-services-basement:17.5.0'
+    
 }
