--- a/warranty_tracker/android/app/src/main/AndroidManifest.xml
+++ b/warranty_tracker/android/app/src/main/AndroidManifest.xml
@@ -43,5 +43,8 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-7346780172090626~4801287384"/>
     </application>
 </manifest>
