--- a/warranty_tracker/pubspec.yaml
+++ b/warranty_tracker/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_spinkit: ^4.1.2+1
   google_fonts: ^1.1.1
   image_picker: ^0.6.0+17
+  firebase_admob: ^0.9.3+4
 
 dev_dependencies:
   flutter_test:
