--- a/warranty_tracker/pubspec.yaml
+++ b/warranty_tracker/pubspec.yaml
@@ -38,9 +38,17 @@ dependencies:
   image_picker: ^0.6.0+17
   firebase_admob: ^0.9.3+4
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  flutter_launcher_icons: ^0.8.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/WarrantyHouseLogo800px.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
